package tms.common.protocol.message;
message DeleteEntryResponse {
}