package tms.common.protocol.message;
import "record.proto";
message WriteRecordsRequest {
  required string table = 1;
  required uint32 id = 2;
  repeated Record record = 3;
}